<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/feedback_1"
            android:textSize="@dimen/text_size_16"
            android:textColor="#716e6f"
             />

        <EditText
            android:id="@+id/feed"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#f7f7f7"
            android:hint="@string/feedback_2"
            android:textSize="@dimen/text_size_14"
            android:gravity="left"
            android:textColorHint="#c9c9c9" 
            android:padding="5dp"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/feedback_3"
            android:textSize="@dimen/text_size_16"
            android:textColor="#716e6f"
             />

        <EditText
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#F7F6F5"
            android:hint="@string/feedback_4"
            android:textSize="@dimen/text_size_14"
            android:padding="5dp"
            android:textColorHint="#c9c9c9" 
             />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/yuan_shape"
            android:text="@string/feedback_5"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />
        
   
    </LinearLayout>

    <View
        	style="@style/line_view"
        	android:layout_width="match_parent"
        	android:layout_height="1px"
        	android:layout_marginBottom="0dp"
        	android:background="@color/line_color" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F6F5" />

</LinearLayout>