<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/head"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/head"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/service_data1"
                    android:textColor="#716e6f"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="#716e6f"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/service_data2"
                    android:textColor="#716e6f"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="#716e6f"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_below="@id/id"
                    android:gravity="center_vertical"
                    android:text="@string/service_data3"
                    android:textColor="#716e6f"
                    android:textSize="@dimen/text_size_14" />
				
                <ImageView 
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@drawable/map"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/or"
                    android:layout_marginLeft="5dp"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/service_data4"
                    android:textColor="#716e6f"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:id="@+id/service_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/or"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/service_data5"
                    android:textColor="#716e6f"
                    android:textSize="@dimen/text_size_14" />

                <RatingBar
                    android:id="@+id/ratingbar"
                    style="@style/roomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.1" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="15dp"
        android:background="#F7F7F7" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/service_data6" />

        <!--  <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="10人" /> -->
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/refreshListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:scrollbars="vertical"
        android:smoothScrollbar="true"
        
         />

</LinearLayout>