<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/titlebar_height"
    android:background="@color/blue_title" >

    <FrameLayout
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RadioButton
            android:id="@+id/rb_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dip"
            android:button="@drawable/icon_right"
            android:drawablePadding="5dip"
            android:onClick="finishAct"
            android:paddingLeft="5dip"
            android:text="@string/main"
            android:textColor="@color/sure_textclolor" />

        <Button
            android:id="@+id/rb_ok"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:background="@null"
            android:drawablePadding="5dip"
            android:onClick="serach_addr"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:text="@string/sure"
            android:textColor="@color/sure_textclolor" />

        <RelativeLayout
            android:id="@+id/layout_addr"
            android:layout_width="fill_parent"
            android:layout_height="32.0dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:layout_toLeftOf="@id/rb_ok"
            android:layout_toRightOf="@id/rb_back"
            android:background="@drawable/draw_radius_guide_yellow_hollow" >

<!--             <LinearLayout -->
<!--                 android:id="@+id/layout_default" -->
<!--                 android:layout_width="match_parent" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_centerVertical="true" -->
<!--                 android:gravity="center" -->
<!--                 android:orientation="horizontal" > -->

<!--                 <ImageView -->
<!--                     android:id="@+id/iv_default" -->
<!--                     android:layout_width="20dip" -->
<!--                     android:layout_height="20dip" -->
<!--                     android:src="@drawable/icon_search" /> -->

<!--                 <TextView -->
<!--                     android:layout_width="wrap_content" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:hint="@string/mian_neayby_inputhint" -->
<!--                     android:textSize="14sp" /> -->
            <!-- </LinearLayout> -->


            <EditText
                android:id="@+id/ed_addr"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="6dip"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:layout_marginTop="6dip"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:drawablePadding="1dip"
                android:hint="@string/mian_neayby_inputhint"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>